--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.8",
+    "dotenv-webpack": "^8.1.1",
     "flowbite-react": "^0.12.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.66.0",
+    "react-icons": "^5.5.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
     "styled-components": "^6.1.19"
@@ -43,6 +45,7 @@
     "@types/react-dom": "^19.1.6",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "msw": "^2.12.2",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.6.2",
@@ -53,5 +56,10 @@
     "webpack": "^5.100.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
